--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "boxicons": "^2.1.4",
     "lucide-react": "^0.473.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "styled-components": "^6.1.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
