--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "lucide-react": "^0.473.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.3",
+    "react-scroll": "^1.9.0",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
