--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
     "react-scroll": "^1.9.0",
-    "styled-components": "^6.1.14"
+    "styled-components": "^6.1.14",
+    "uuid": "^11.0.5",
+    "vercel": "^39.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
