--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.4.1",
+    "@vercel/speed-insights": "^1.1.0",
     "boxicons": "^2.1.4",
     "lucide-react": "^0.473.0",
     "react": "^18.3.1",
@@ -19,7 +20,7 @@
     "react-scroll": "^1.9.0",
     "styled-components": "^6.1.14",
     "uuid": "^11.0.5",
-    "vercel": "^39.3.0"
+    "vercel": "^28.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
